--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "dlinfo==2.0.0",
     "espeakng-loader==0.2.4",
     "fastapi==0.116.1",
+    "faster-whisper>=1.2.0",
     "flatbuffers==25.2.10",
     "frozenlist==1.7.0",
     "h11==0.16.0",
@@ -49,6 +50,7 @@ dependencies = [
     "pycparser==2.22",
     "pydantic==2.11.7",
     "pydantic-core==2.33.2",
+    "pydub>=0.25.1",
     "pyparsing==3.2.3",
     "python-dateutil==2.9.0.post0",
     "rdflib==7.1.4",
