--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "dlinfo==2.0.0",
     "espeakng-loader==0.2.4",
     "fastapi==0.116.1",
+    "faster-whisper>=1.2.0",
     "flatbuffers==25.2.10",
     "frozenlist==1.7.0",
     "h11==0.16.0",
@@ -49,6 +50,7 @@ dependencies = [
     "pycparser==2.22",
     "pydantic==2.11.7",
     "pydantic-core==2.33.2",
+    "pydub>=0.25.1",
     "pyparsing==3.2.3",
     "pytest>=8.4.1",
     "python-dateutil==2.9.0.post0",
@@ -65,6 +67,7 @@ dependencies = [
     "soundfile==0.13.1",
     "starlette==0.47.2",
     "sympy==1.14.0",
+    "torch>=2.8.0",
     "typing-extensions==4.14.1",
     "typing-inspection==0.4.1",
     "uritemplate==4.2.0",
@@ -72,6 +75,7 @@ dependencies = [
     "uvicorn[standard]==0.35.0",
     "watchdog==6.0.0",
     "websockets>=15.0.1",
+    "wsproto>=1.2.0",
     "yarl==1.20.1",
 ]
 
