--- a/requirements.txt
+++ b/requirements.txt
@@ -68,3 +68,6 @@ urllib3==2.5.0
 uvicorn==0.35.0
 watchdog==6.0.0
 yarl==1.20.1
+
+# Pin setuptools to avoid pkg_resources deprecation warnings
+setuptools<81
