Fixed nlp and contraction processing.

--- a/LiteTTS/voices/voice_mappings.json
+++ b/LiteTTS/voices/voice_mappings.json
@@ -40,6 +40,7 @@
   "nezumi": "jf_nezumi",
   "tebukuro": "jf_tebukuro",
   "kumo": "jm_kumo",
+  "voice_001": "test_voice_001",
   "xiaobei": "zf_xiaobei",
   "xiaoni": "zf_xiaoni",
   "xiaoxiao": "zf_xiaoxiao",
