--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "flatbuffers==25.2.10",
     "frozenlist==1.7.0",
     "h11==0.16.0",
+    "httpx>=0.28.1",
     "humanfriendly==10.0",
     "idna==3.10",
     "isodate==0.7.2",
@@ -53,6 +54,7 @@ dependencies = [
     "pyparsing==3.2.3",
     "pytest>=8.4.1",
     "python-dateutil==2.9.0.post0",
+    "python-multipart>=0.0.20",
     "rdflib==7.1.4",
     "referencing==0.36.2",
     "regex==2025.7.34",
