--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "dlinfo==2.0.0",
     "espeakng-loader==0.2.4",
     "fastapi==0.116.1",
-    "faster-whisper>=1.2.0",
+    "faster-whisper==1.2.0",
     "flatbuffers==25.2.10",
     "frozenlist==1.7.0",
     "h11==0.16.0",
