--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "jsonschema-specifications==2025.4.1",
     "kokoro-onnx==0.4.9",
     "language-tags==1.2.0",
+    "librosa>=0.11.0",
     "markupsafe==3.0.2",
     "mpmath==1.3.0",
     "multidict==6.6.4",
@@ -52,6 +53,7 @@ dependencies = [
     "pydantic-core==2.33.2",
     "pydub>=0.25.1",
     "pyparsing==3.2.3",
+    "pyrubberband>=0.4.0",
     "pytest>=8.4.1",
     "python-dateutil==2.9.0.post0",
     "python-multipart>=0.0.20",
